--- a/main.css
+++ b/main.css
@@ -79,6 +79,10 @@ button:hover {
     background-color: hsl(158, 60%, 21%);
 }
 
+.attribution {
+    font-family: monserrat;
+}
+
 @media (max-width:700px) {
     .container {
         grid-template-columns: 1fr;
