--- a/main.css
+++ b/main.css
@@ -80,7 +80,9 @@ button:hover {
 }
 
 .attribution {
-    font-family: monserrat;
+    font-family: montserrat;
+    position: absolute;
+    top: 100%;
 }
 
 @media (max-width:700px) {
