--- a/main.css
+++ b/main.css
@@ -14,6 +14,10 @@ body {
     display: flex;
     height: 100vh;
     font-size: 14px;
+    background-color: hsl(30, 38%, 92%);
+}
+main {
+    margin:auto;
 }
 
 .container {
@@ -21,7 +25,6 @@ body {
     grid-template-columns: repeat(2, 1fr);
     width: 500px;
     margin: auto;
-    background-color: hsl(30, 38%, 92%);
 }
 
 .chanel, .cont-text, .container_img {
@@ -81,8 +84,7 @@ button:hover {
 
 .attribution {
     font-family: montserrat;
-    position: absolute;
-    top: 100%;
+    font-size: 11px;
 }
 
 @media (max-width:700px) {
